updated news, publication

--- a/publication/present.html
+++ b/publication/present.html
@@ -85,8 +85,8 @@
                     <div class="media-body">
                         <ul>
                             <li><p>[SCI]</p> Young-Seob Jeong, JunHa Hwang, SeungDong Lee, Goodwill Erasmo Ndomba, Youngjin Kim, Jeung-Im Kim, "Sensor-based Indoor Fire Forecasting Using Transformer Encoder," Sensors, Vol. 24(7), Issue 2379, pp.1-9, April 8, 2024. [ACK: 중점연구소컴정연2020(50%), NRF2023간호대(50%)] (Gradudation: JunHa Hwang)</li>
-                            <li><p>[SCI]</p> Medard Edmund Mswahili, Kyuri Jo, Seung Dong Lee, Young-Seob Jeong, "Multi type Features Graph Neural Networks for Cocrystals Prediction using API coformers Interactions," Current Medicinal Chemistry, 2024. (accepted) [ACK: 중점연구소컴정연2020(50%), 소중(50%)] (Gradudation: Seung Dong Lee)</li>
-                            <li><p>[SCI]</p> Medard Edmund Mswahili, Goodwill Erasmo Ndomba, Young Jin Kim, Kyuri Jo, Young-Seob Jeong, "Relational Graph Convolution Network with Multi Features for Anti-COVID-19 Drugs Discovery using 3CLpro Potential Target," Current Bioinformatics, 2024. (accepted) [ACK: 중점연구소컴정연2020(50%)] (Gradudation: Medard Edmund Mswahili)</li>
+                            <li><p>[SCI]</p> Medard Edmund Mswahili, Kyuri Jo, Seung Dong Lee, Young-Seob Jeong, "Multi type Features Graph Neural Networks for Cocrystals Prediction using API coformers Interactions," Current Medicinal Chemistry, Vol. 31, Issue 36, pp.5953-5968, 2024. (online publication date: May 22, 2024) [ACK: 중점연구소컴정연2020(50%), 소중(50%)] (Gradudation: Seung Dong Lee)</li>
+                            <li><p>[SCI]</p> Medard Edmund Mswahili, Goodwill Erasmo Ndomba, Young Jin Kim, Kyuri Jo, Young-Seob Jeong (corresponding author), "Relational Graph Convolution Network with Multi Features for Anti-COVID-19 Drugs Discovery using 3CLpro Potential Target," Current Bioinformatics, Vol. 20, Issue 1, pp.18-30, 2025. (online publicationd date: March 8, 2024) [ACK: 중점연구소컴정연2020(50%)] (Gradudation: Medard Edmund Mswahili)</li>
                             <li><p>[SCI]</p> Medard Edmund Mswahili, Goodwill Erasmo Ndomba, Kyuri Jo, Young-Seob Jeong, "Graph Neural Network and BERT Model for Antimalarial Drug Predictions Using Plasmodium Potential Targets," Applied Sciences, Vol. 14, Issue 1472, pp.1-17, February 11, 2024. [ACK: NRF2020(50%), NRF2023간호대(50%)] (Gradudation: Goodwill Erasmo Ndomba)</li>
                             <li><p>[국제학술대회]</p> Chae-Gyun Lim, Young-Seob Jeong, Woo-Jin Kim, Youngjin Kim, Ho-Jin Choi, "Text Preprocessing and Annotation Tool for Time Information," in Proceedings of IEEE International Conference on Big Data and Smart Computing (BigComp), Bangkok, Thailand, pp.351-352, February 18-21, 2024. (presentation: February 19) [ACK: NRF2023간호대(100%)]</li>                              
                             <li><p>[국제학술대회]</p> Goodwill Ndomba, Young-Seob Jeong, "Effects of Swahili monolingual tokenizer on downstream tasks," in Proceedings of IEEE International Conference on Big Data and Smart Computing (BigComp), Bangkok, Thailand, pp.357-358, February 18-21, 2024. (presentation: February 19) [ACK: NRF2020(50%), NRF2023간호대(50%)]</li>                                
@@ -151,6 +151,8 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>[출원]</p> 발명인: 정영섭, 황준하, 이승동, 김은진; 발명의 명칭: 서브 데이터셋을 생성하기 위한 방법 및 이를 수행하기 위한 컴퓨팅 장치; 출원일: 2024-08-30; 출원번호: 10-2024-0117438 [ACK: GrandICT연구센터]</li>
+                            <li><p>[출원]</p> 발명인: 정영섭, 황준하, 이승동, 김은진; 발명의 명칭: 딥 러닝 기반의 스팸 메시지 차단 장치 및 방법; 출원일: 2024-08-22; 출원번호: 10-2024-0113134 [ACK: GrandICT연구센터]</li>
                             <li><p>[출원]</p> 발명인: 정영섭, 김성훈, 이상범, 한상현; 발명의 명칭: 음악 추천 서버 및 이를 이용한 음악 추천 방법; 출원일: 2023-09-26; 출원번호: 10-2023-0129179 [ACK: None]</li>
                             <li><p>[출원]</p> 발명인: 정영섭; 발명의 명칭: 자동차의 급발진 데이터 관리 서버 및 이를 이용한 급발진 데이터 관리 방법; 출원일: 2023-05-31; 출원번호: 10-2023-0070176 [ACK: None]</li>                                
                             <li><p>[출원]</p> 발명인: 정영섭; 발명의 명칭: 방송 콘텐츠 재생 중 피드백을 통해 관리하는 치매 관리 서버 및 이를 이용한 치매 관리 방법; 출원일: 2023-02-22; 출원번호: 10-2023-0023619 [ACK: NRF2020]</li>                                
@@ -171,6 +173,8 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>GrandICT연구센터:</p> 디지털선도기술핵심인재양성</li>
+
                             <li><p>중점연구소컴정연2020:</p> 충북대 중점연구소 사업 (컴퓨터정보통신연구소) (전체기간: 2020.06.01~2029.05.31)</li>
 
                             <li><p>NRF2023간호대:</p> 한국연구재단 중견연구 (참여) (전체기간: 2023.3.1.~2028.2.29)</li>
