--- a/news.html
+++ b/news.html
@@ -86,7 +86,7 @@
                         </li>
                     </div>
                     <div class="content">
-                        <!-- <img src="./assets/news/학술대회_ACL_2024_1.jpg" alt="학술대회_ACL_2024_1.jpg"> -->
+                        <img src="./assets/news/학술대회_ACL_2024_1.jpg" alt="학술대회_ACL_2024_1.jpg">
                         <img src="./assets/news/학술대회_ACL_2024_2.jpg" alt="학술대회_ACL_2024_2.jpg">
                     </div>
                 </div> 
