--- a/people/student.html
+++ b/people/student.html
@@ -144,7 +144,12 @@
                         <img src="../assets/member/2022심현석.jpg" alt="Hyun-Seok Sim">
                         <p>Hyun-Seok Sim</p>
                         <p class="sub-text">Undergraduate researcher (2024. 9~)<br><br>Machine learning<br>Back-end Programming</p>
-                    </div>                
+                    </div>
+                    <div class="img">
+                        <img src="../assets/member/2020공지혁.jpg" alt="Jee-Hyeok Kong">
+                        <p>Jee-Hyeok Kong</p>
+                        <p class="sub-text">Undergraduate researcher (2024. 9~)<br><br>Back-end Programming<br></p>
+                    </div>                  
                 </div>
             </div>
             <div class="margin"></div>
