--- a/publication/present.html
+++ b/publication/present.html
@@ -152,7 +152,8 @@
                 <div class="box"><p>출원</p></div>
                 <div class="publication">
                     <div class="media-body">
-                        <ul><li><p>[출원]</p> 발명인: 정영섭, 이승동, 김은진, 황준하; 발명의 명칭: 언어 모델 학습 방법 및 이를 수행하기 위한 컴퓨팅 장치; 출원일: 2024-10-15; 출원번호: 10-2024-0140736 [ACK: GrandICT연구센터]</li>
+                        <ul><li><p>[출원]</p> 발명인: 정영섭, 김은진, 황준하, 이승동; 발명의 명칭: 발화 데이터를 이용한 대규모 언어 모델의 학습 방법 및 이를 수행하기 위한 컴퓨팅 장치; 출원일: 2024-11-15; 출원번호: 10-2024-0162771 [ACK: 중점연구소컴정연2020]</li>
+                            <li><p>[출원]</p> 발명인: 정영섭, 이승동, 김은진, 황준하; 발명의 명칭: 언어 모델 학습 방법 및 이를 수행하기 위한 컴퓨팅 장치; 출원일: 2024-10-15; 출원번호: 10-2024-0140736 [ACK: GrandICT연구센터]</li>
                             <li><p>[출원]</p> 발명인: 정영섭, 황준하, 이승동, 김은진; 발명의 명칭: 서브 데이터셋을 생성하기 위한 방법 및 이를 수행하기 위한 컴퓨팅 장치; 출원일: 2024-08-30; 출원번호: 10-2024-0117438 [ACK: GrandICT연구센터]</li>
                             <li><p>[출원]</p> 발명인: 정영섭, 황준하, 이승동, 김은진; 발명의 명칭: 딥 러닝 기반의 스팸 메시지 차단 장치 및 방법; 출원일: 2024-08-22; 출원번호: 10-2024-0113134 [ACK: GrandICT연구센터]</li>
                             <li><p>[출원]</p> 발명인: 정영섭, 김성훈, 이상범, 한상현; 발명의 명칭: 음악 추천 서버 및 이를 이용한 음악 추천 방법; 출원일: 2023-09-26; 출원번호: 10-2023-0129179 [ACK: None]</li>
