--- a/publication/present.html
+++ b/publication/present.html
@@ -84,6 +84,7 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>[국내학술대회]</p> 정영섭, 여은성, 김미서, 황기영, "드론을 사용한 인공지능 기반의 작문," 한국통신학회 추계종합학술발표회 논문집, Gyeongju, Korea, pp.1-2, November 20-22, 2024. (presentation: November 22) [ACK: NRF2020(50%), 중점연구소컴정연2020(50%)]</li>
                             <li><p>[국내학술대회]</p> 여은성, 김미서, 황기영, 정영섭, "상공 이미지의 작은 조류 탐지 및 분류," 한국인터넷정보학회 추계학술발표대회 논문집, 제25권, 제2호, Jeju, Korea, pp.9-10, October 24-26, 2024.  [ACK: 중점연구소컴정연2020(50%)]</li>
                             <li><p>[SCI]</p> Medard Edmund Mswahili, Young-Seob Jeong, "Transformer-Based Models For Chemical SMILES Representation: A Comprehensive Literature Review," Heliyon, Vol. 10, Issue 20, pp.1-18, October 30, 2024. (ISSN: 2405-8440, IF: 3.4, Publisher: CELL PRESS) [ACK: 중점연구소컴정연2020(50%)] (Gradudation: None)</li>
                             <li><p>[SCI]</p> Young-Seob Jeong, JunHa Hwang, SeungDong Lee, Goodwill Erasmo Ndomba, Youngjin Kim, Jeung-Im Kim, "Sensor-based Indoor Fire Forecasting Using Transformer Encoder," Sensors, Vol. 24(7), Issue 2379, pp.1-9, April 8, 2024. [ACK: 중점연구소컴정연2020(50%), NRF2023간호대(50%)] (Gradudation: JunHa Hwang)</li>
