--- a/people/alumni.html
+++ b/people/alumni.html
@@ -79,7 +79,7 @@
                     <div class="img">
                         <img src="../assets/member/alumni/2019박정현.png" alt="Jung-Hyun Park">
                         <p>Jung-Hyun Park</p>
-                        <p class="sub-text">Undergraduate researcher (2023. 3 ~ 2024. 10)<br><br>Web Programming<br>Aff:LG CNS</p>w
+                        <p class="sub-text">Undergraduate researcher (2023. 3 ~ 2024. 10)<br><br>Web Programming<br>Aff:LG CNS</p>
                     </div>
                     <div class="img">
                         <img src="../assets/member/alumni/이채운.jpg" alt="Chae-Un Lee">
