--- a/publication/present.html
+++ b/publication/present.html
@@ -84,7 +84,7 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
-                            <li><p>[SCI]</p> Goodwill Erasmo Ndomba, Medard Edmund Mswahili, Young-Seob Jeong, "Tokenizers for African Languages," IEEE Access, Vol. 13, pp.1046-1054, 2025. (ISSN: 2169-3536, Publisher: IEEE) [ACK: NRF소설(50%), IITP개성AI(50%)]</li>
+                            <li><p>[SCI]</p> Goodwill Erasmo Ndomba, Medard Edmund Mswahili, Young-Seob Jeong, "Tokenizers for African Languages," IEEE Access, Vol. 13, pp.1046-1054, January 2, 2025. (ISSN: 2169-3536, Publisher: IEEE) [ACK: NRF소설(50%), IITP개성AI(50%)]</li>
                             <li><p>[국내학술대회]</p> 정영섭, 여은성, 김미서, 황기영, "드론을 사용한 인공지능 기반의 작문," 한국통신학회 추계종합학술발표회 논문집, Gyeongju, Korea, pp.1-2, November 20-22, 2024. (presentation: November 22) [ACK: NRF2020(50%), 중점연구소컴정연2020(50%)]</li>
                             <li><p>[KCI]</p> Young-Seob Jeong,  Yeong-Jin Kim,  Medard Edmund Mswahili, Jiyoung Woo,  Ah Reum Kang, "Malware Byte Stream Analysis Using Overlapped LDA," Journal of The Korea Society of Computer and Information, Vol. 29, No. 12, pp. 109-119, December 31, 2024. [ACK: NRF2020(50%)]</li>
                             <li><p>[국내학술대회]</p> 여은성, 김미서, 황기영, 정영섭, "상공 이미지의 작은 조류 탐지 및 분류," 한국인터넷정보학회 추계학술발표대회 논문집, 제25권, 제2호, Jeju, Korea, pp.9-10, October 24-26, 2024.  [ACK: 중점연구소컴정연2020(50%)]</li>
