--- a/publication/present.html
+++ b/publication/present.html
@@ -84,6 +84,10 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>[국내학술대회]</p> 윤별, 정영섭, "트랜스포머 기반 한국어 문맥 이모지 시퀀스의 양방향 번역," 한국컴퓨터정보학회 동계학술대회 논문집, 제33권, 제1호, Cheonan, Korea, pp.9-12, January 9-11, 2025. (presentation: January 10) [ACK: IITP개성AI(50%), NRF소설(50%)]</li>
+                            <li><p>[국내학술대회]</p> 이진경, 정영섭, "지능형 감시 시스템을 위한 객체, 행동, 공간 정보를 통합한 이미지 캡셔닝 프레임워크," 한국컴퓨터정보학회 동계학술대회 논문집, 제33권, 제1호, Cheonan, Korea, pp.13-16, January 9-11, 2025. (presentation: January 10) [ACK: NRF2020(50%), IITP개성AI(50%)]</li>
+                            <li><p>[국내학술대회]</p> 최별규, 정영섭, "Instruction Tuning 기반 한국어-한국수어 번역기," 한국컴퓨터정보학회 동계학술대회 논문집, 제33권, 제1호, Cheonan, Korea, pp.17-20, January 9-11, 2025. (presentation: January 10) [ACK: NRF2020(50%), NRF소설(50%)]</li>
+                            <li><p>[국내학술대회]</p> 김무성, 정영섭, "스마트폰을 이용한 간판 촬영 및 리뷰 정보 확인 시스템," 한국컴퓨터정보학회 동계학술대회 논문집, 제33권, 제1호, Cheonan, Korea, pp.253-256, January 9-11, 2025. (presentation: January 10) [ACK: NRF2020(50%), IITP개성AI(50%)]</li>
                             <li><p>[SCI]</p> Goodwill Erasmo Ndomba, Medard Edmund Mswahili, Young-Seob Jeong, "Tokenizers for African Languages," IEEE Access, Vol. 13, pp.1046-1054, January 2, 2025. (ISSN: 2169-3536, Publisher: IEEE) [ACK: NRF소설(50%), IITP개성AI(50%)]</li>
                             <li><p>[국내학술대회]</p> 정영섭, 여은성, 김미서, 황기영, "드론을 사용한 인공지능 기반의 작문," 한국통신학회 추계종합학술발표회 논문집, Gyeongju, Korea, pp.1-2, November 20-22, 2024. (presentation: November 22) [ACK: NRF2020(50%), 중점연구소컴정연2020(50%)]</li>
                             <li><p>[KCI]</p> Young-Seob Jeong,  Yeong-Jin Kim,  Medard Edmund Mswahili, Jiyoung Woo,  Ah Reum Kang, "Malware Byte Stream Analysis Using Overlapped LDA," Journal of The Korea Society of Computer and Information, Vol. 29, No. 12, pp. 109-119, December 31, 2024. [ACK: NRF2020(50%)]</li>
