--- a/publication/present.html
+++ b/publication/present.html
@@ -134,6 +134,8 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>[우수논문상]</p> 한국컴퓨터정보학회 동계학술대회, January 10, 2025. (제목: 지능형 감시 시스템을 위한 객체, 행동, 공간 정보를 통합한 이미지 캡셔닝 프레임워크) [ACK: NRF2020(50%), IITP개성AI(50%)]</li>
+                            <li><p>[우수논문상]</p> 한국컴퓨터정보학회 동계학술대회, January 10, 2025. (제목: 트랜스포머 기반 한국어 문맥 이모지 시퀀스의 양방향 번역) [ACK: IITP개성AI(50%), NRF소설(50%)]</li>
                             <li><p>[우수논문상]</p> 한국컴퓨터정보학회 동계학술대회, January 19, 2024. (제목: 자연어처리를 통한 온라인 학습 플랫폼 사용자 질의 답변 및 Word cloud를 활용한 키워드 시각화)</li>
                             <li><p>[우수논문상]</p> 한국컴퓨터정보학회 동계학술대회, January 19, 2024. (제목: 감성 분석 화장품 사용자 리뷰에 대한 속성기반 감성분석)</li>
                             <li><p>[장려상]</p> 2023 CBNU Megacity X-Corps 경진대회, 충북대학교 메가시티실전문제연구단, October 26, 2023. (팀명: Mal-Where)</li>
