--- a/publication/present.html
+++ b/publication/present.html
@@ -134,6 +134,8 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>[우수논문상]</p> 한국컴퓨터정보학회 동계학술대회, January 10, 2025. (제목: 스마트폰을 이용한 간판 촬영 및 리뷰 정보 확인 시스템) [ACK: NRF2020(50%), IITP개성AI(50%)]</li>
+                            <li><p>[우수논문상]</p> 한국컴퓨터정보학회 동계학술대회, January 10, 2025. (제목: Instruction Tuning 기반 한국어-한국수어 번역기) [ACK: NRF2020(50%), NRF소설(50%)]</li>
                             <li><p>[우수논문상]</p> 한국컴퓨터정보학회 동계학술대회, January 10, 2025. (제목: 지능형 감시 시스템을 위한 객체, 행동, 공간 정보를 통합한 이미지 캡셔닝 프레임워크) [ACK: NRF2020(50%), IITP개성AI(50%)]</li>
                             <li><p>[우수논문상]</p> 한국컴퓨터정보학회 동계학술대회, January 10, 2025. (제목: 트랜스포머 기반 한국어 문맥 이모지 시퀀스의 양방향 번역) [ACK: IITP개성AI(50%), NRF소설(50%)]</li>
                             <li><p>[우수논문상]</p> 한국컴퓨터정보학회 동계학술대회, January 19, 2024. (제목: 자연어처리를 통한 온라인 학습 플랫폼 사용자 질의 답변 및 Word cloud를 활용한 키워드 시각화)</li>
