--- a/news.html
+++ b/news.html
@@ -87,8 +87,8 @@
                         </li>
                     </div>
                     <div class="content">
-                        <img src="./assets/news/DAI_LAB_workshop_옥화용소_1.jpg" alt="국제인턴십_2024_1.jpg">
-                        <img src="./assets/news/DAI_LAB_workshop_옥화용소_2.jpg" alt="국제인턴십_2024_2.jpg">
+                        <img src="./assets/news/DAI_LAB_workshop_옥화용소_1.jpg" alt="workshop_2025_1.jpg">
+                        <img src="./assets/news/DAI_LAB_workshop_옥화용소_2.jpg" alt="workshop_2025_2.jpg">
                     </div>
                 </div>
             </div>
