--- a/news.html
+++ b/news.html
@@ -87,8 +87,8 @@
                         </li>
                     </div>
                     <div class="content">
-                        <img src="./assets/news/DAI_LAB_옥화용소_202501.jpg" alt="workshop_2025_1.jpg">
-                        <img src="./assets/news/DAI_LAB_옥화용소_202502.jpg" alt="workshop_2025_1.jpg">
+                        <img src="./assets/news/DAI_LAB_workshop_202501.jpg" alt="workshop_2025_1.jpg">
+                        <img src="./assets/news/DAI_LAB_workshop_202502.jpg" alt="workshop_2025_1.jpg">
                     </div>
                 </div>
             </div>
