changed students' status

--- a/people/alumni.html
+++ b/people/alumni.html
@@ -77,6 +77,16 @@
             <div class="member-area">
                 <div class="member-imgs">
                     <div class="img">
+                        <img src="../assets/member/Goodwill.jpg" alt="Goodwill Erasmo Ndomba">
+                        <p>Goodwill Erasmo Ndomba</p>
+                        <p class="sub-text">Master degree (2025. 2)<br><br>Machine learning<br>NLP</p>
+                    </div>
+                    <div class="img">
+                        <img src="../assets/member/2018이승동.jpg" alt="SeungDong Lee">
+                        <p>Seung-Dong Lee</p>
+                        <p class="sub-text">Master degree (2025. 2)<br><br>NLP<br>Game programming</p>
+                    </div>
+                    <div class="img">
                         <img src="../assets/member/alumni/2019박정현.png" alt="Jung-Hyun Park">
                         <p>Jung-Hyun Park</p>
                         <p class="sub-text">Undergraduate researcher (2023. 3 ~ 2024. 10)<br><br>Web Programming<br>Aff:LG CNS</p>
