--- a/people/student.html
+++ b/people/student.html
@@ -85,7 +85,11 @@
                         <p>Eun-Jin Kim</p>
                         <p class="sub-text">Integrated Master and PhD course (2023. 3~)<br><br>Artificial intelligence<br>Machine learning</p>
                     </div>
-                    
+                    <div class="img">
+                        <img src="../assets/member/2018황준하.jpg" alt="JunHa Hwang">
+                        <p>Jun-Ha Hwang</p>
+                        <p class="sub-text">PhD course (2025. 3~)<br><br>Language models<br>Artificial intelligence</p>
+                    </div>
                 </div>
             </div>
 
@@ -96,21 +100,6 @@
             </div>
             <div class="member-area">
                 <div class="member-imgs">
-                    <div class="img">
-                        <img src="../assets/member/Goodwill.jpg" alt="Goodwill Erasmo Ndomba">
-                        <p>Goodwill Erasmo Ndomba</p>
-                        <p class="sub-text">Master course (2022. 9~)<br><br>Machine learning<br>NLP</p>
-                    </div>
-                    <div class="img">
-                        <img src="../assets/member/2018황준하.jpg" alt="JunHa Hwang">
-                        <p>Jun-Ha Hwang</p>
-                        <p class="sub-text">Master course (2023. 9~) - Integrated Bachelor and Master course<br><br>Language models<br>Artificial intelligence</p>
-                    </div>
-                    <div class="img">
-                        <img src="../assets/member/2018이승동.jpg" alt="SeungDong Lee">
-                        <p>Seung-Dong Lee</p>
-                        <p class="sub-text">Master course (2023. 9~) - Integrated Bachelor and Master course<br><br>NLP<br>Game programming</p>
-                    </div>
                     <div class="img">
                         <img src="../assets/member/2020김미서.jpg" alt="Miseo Kim">
                         <p>Mi-seo Kim</p>
