--- a/publication/present.html
+++ b/publication/present.html
@@ -84,6 +84,7 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>[KCI]</p> Gati Lother Martin, Young-Seob Jeong, Ah Reum Kang, Jiyoung Woo, "HWP Malware Detection using Transformer," Journal of The Korea Society of Computer and Information, Vol. 30, No. 1, pp. 87-97, January 1st, 2025. [ACK: None]</li>
                             <li><p>[SCI]</p> Medard Edmund Mswahili, JunHa Hwang, Jagath C. Rajapakse, Kyuri Jo, Young-Seob Jeong, "Positional embeddings and zero-shot learning using BERT for molecular-property prediction," Journal of Cheminformatics, Vol. 17, Issue 17, pp.1-22, February 5, 2025. (ISSN: 1758-2946, Q1, Publisher: BMC) [ACK: NRF2020(50%)]</li>
                             <li><p>[국내학술대회]</p> 윤별, 정영섭, "트랜스포머 기반 한국어 문맥 이모지 시퀀스의 양방향 번역," 한국컴퓨터정보학회 동계학술대회 논문집, 제33권, 제1호, Cheonan, Korea, pp.9-12, January 9-11, 2025. (presentation: January 10) [ACK: IITP개성AI(50%), NRF소설(50%)]</li>
                             <li><p>[국내학술대회]</p> 이진경, 정영섭, "지능형 감시 시스템을 위한 객체, 행동, 공간 정보를 통합한 이미지 캡셔닝 프레임워크," 한국컴퓨터정보학회 동계학술대회 논문집, 제33권, 제1호, Cheonan, Korea, pp.13-16, January 9-11, 2025. (presentation: January 10) [ACK: NRF2020(50%), IITP개성AI(50%)]</li>
