--- a/news.html
+++ b/news.html
@@ -87,8 +87,8 @@
                         </li>
                     </div>
                     <div class="content">
-                        <img src="./assets/news/국제인턴십_2025_1.jpg" alt="국제인턴십_2025_1.jpg">
-                        <img src="./assets/news/국제인턴십_2025_2.jpg" alt="국제인턴십_2025_2.jpg">
+                        <img src="./assets/news/international_internship_2025_1.jpg" alt="international_internship_2025_2.jpg">
+                        <img src="./assets/news/international_internship_2025_2.jpg" alt="international_internship_2025_2.jpg">
                     </div>
                 </div> 
                 
@@ -117,8 +117,8 @@
                         </li>
                     </div>
                     <div class="content">
-                        <img src="./assets/news/국제인턴십_2024_1.jpg" alt="국제인턴십_2024_1.jpg">
-                        <img src="./assets/news/국제인턴십_2024_2.jpg" alt="국제인턴십_2024_2.jpg">
+                        <img src="./assets/news/international_internship_2024_1.jpg" alt="international_internship_2024_1.jpg">
+                        <img src="./assets/news/international_internship_2024_2.jpg" alt="international_internship_2024_2.jpg">
                     </div>
                 </div> 
 
