updated alumni & student

--- a/people/student.html
+++ b/people/student.html
@@ -136,15 +136,25 @@
                         <p class="sub-text">Undergraduate researcher (2024. 4~)<br><br>Machine learning<br>Computer Vision</p>
                     </div>
                     <div class="img">
-                        <img src="../assets/member/2022심현석.jpg" alt="Hyun-Seok Sim">
-                        <p>Hyun-Seok Sim</p>
-                        <p class="sub-text">Undergraduate researcher (2024. 9~)<br><br>Machine learning<br>Back-end Programming</p>
-                    </div>
-                    <div class="img">
                         <img src="../assets/member/2020공지혁.jpg" alt="Jee-Hyeok Kong">
                         <p>Jee-Hyeok Kong</p>
                         <p class="sub-text">Undergraduate researcher (2024. 11~)<br><br>Back-end Programming<br></p>
-                    </div>                  
+                    </div>           
+                    <div class="img">
+                        <img src="../assets/member/2023민태원.jpg" alt="Tae-Won Min">
+                        <p>Tae-Won Min</p>
+                        <p class="sub-text">Undergraduate researcher (2025. 3~)<br><br>Machine learning<br>NLP<br></p>
+                    </div>       
+                    <div class="img">
+                        <img src="../assets/member/2023엄지현.jpg" alt="Ji-Hyeon Eom">
+                        <p>Ji-Heyon Eom</p>
+                        <p class="sub-text">Undergraduate researcher (2025. 3~)<br><br>Back-end Programming<br></p>
+                    </div>   
+                    <div class="img">
+                        <img src="../assets/member/2023우태현.jpg" alt="Tae-Hyun Woo">
+                        <p>Tae-Hyun Woo</p>
+                        <p class="sub-text">Undergraduate researcher (2025. 3~)<br><br>Security<br></p>
+                    </div>   
                 </div>
             </div>
             <div class="margin"></div>
