--- a/people/alumni.html
+++ b/people/alumni.html
@@ -77,6 +77,11 @@
             <div class="member-area">
                 <div class="member-imgs">
                     <div class="img">
+                        <img src="../assets/member/alumni/2022심현석.jpg" alt="Hyeon-Seok Sim">
+                        <p>Hyeon-Seok Sim</p>
+                        <p class="sub-text">Undergraduate researcher (2024. 9 ~ 2025. 2)<br><br>Machine learning<br>Back-end Programming</p>
+                    </div>
+                    <div class="img">
                         <img src="../assets/member/alumni/2019박정현.png" alt="Jung-Hyun Park">
                         <p>Jung-Hyun Park</p>
                         <p class="sub-text">Undergraduate researcher (2023. 3 ~ 2024. 10)<br><br>Web Programming<br>Aff:LG CNS</p>
