--- a/contact.html
+++ b/contact.html
@@ -36,6 +36,7 @@
                 </li>
                 <li class="dropdown"><a href="./news.html" data-target="news">News</a></li>
                 <li class="dropdown"><a href="./contact.html" data-target="contact">Contact</a></li>
+                <li class="dropdown"><a href="./privacy.html" data-target="privacy policy">Privacy Policy</a></li>
             </ul>
             <a class="menu-trigger" href="#">
                 <span></span>
@@ -61,6 +62,7 @@
                 </li>
                 <li><a href="./news.html" data-target="news">News</a></li>
                 <li><a href="./contact.html" data-target="contact">Contact</a></li>
+                <li><a href="./privacy.html" data-target="privacy policy">Privacy Policy</a></li>
             </ul>
             
             
