--- a/people/alumni.html
+++ b/people/alumni.html
@@ -38,6 +38,7 @@
                     </li>
                     <li class="dropdown"><a href="../news.html" data-target="news">News</a></li>
                     <li class="dropdown"><a href="../contact.html" data-target="contact">Contact</a></li>
+                    <li class="dropdown"><a href="../privacy.html" data-target="privacy policy">Privacy Policy</a></li>
                 </ul>
                 <a class="menu-trigger" href="#">
                     <span></span>
@@ -63,6 +64,7 @@
                     </li>
                     <li><a href="../news.html" data-target="news">News</a></li>
                     <li><a href="../contact.html" data-target="contact">Contact</a></li>
+                    <li><a href="../privacy.html" data-target="privacy policy">Privacy Policy</a></li>
                 </ul>
                 
                 
