--- a/people/alumni.html
+++ b/people/alumni.html
@@ -78,70 +78,101 @@
             </div>
             <div class="member-area">
                 <div class="member-imgs">
-                    <div class="img">
-                        <img src="../assets/member/alumni/2022심현석.jpg" alt="Hyeon-Seok Sim">
-                        <p>Hyeon-Seok Sim</p>
-                        <p class="sub-text">Undergraduate researcher (2024. 9 ~ 2025. 2)<br><br>Machine learning<br>Back-end Programming</p>
+
+                    <div class="second-gen-area">
+                        <div class="generation-title">
+                            <div class="p-topic">
+                                2nd Generation
+                            </div>
+                        </div>
+                        <div class="second-master">
+                            <div class="master-title">
+                                <div class="p-topic">
+                                    Mastered
+                                </div>
+                            </div>
+                            <div class="img">
+                                <img src="../assets/member/Goodwill.jpg" alt="Goodwill Erasmo Ndomba">
+                                <p>Goodwill Erasmo Ndomba</p>
+                                <p class="sub-text">Master degree (2025. 2)<br><br>Machine learning<br>NLP</p>
+                            </div>
+                            <div class="img">
+                                <img src="../assets/member/2018이승동.jpg" alt="SeungDong Lee">
+                                <p>Seung-Dong Lee</p>
+                                <p class="sub-text">Master degree (2025. 2)<br><br>NLP<br>Game programming</p>
+                            </div>
+                        </div>
+                        <div class="second-undergraduate">
+                            <div class="undergraduate-title">
+                                <div class="p-topic">
+                                    Undergraduated
+                                </div>
+                            </div>
+                            <div class="img">
+                                <img src="../assets/member/alumni/2022심현석.jpg" alt="Hyeon-Seok Sim">
+                                <p>Hyeon-Seok Sim</p>
+                                <p class="sub-text">Undergraduate researcher (2024. 9 ~ 2025. 2)<br><br>Machine learning<br>Back-end Programming</p>
+                            </div>
+                            <div class="img">
+                                <img src="../assets/member/alumni/2019박정현.png" alt="Jung-Hyun Park">
+                                <p>Jung-Hyun Park</p>
+                                <p class="sub-text">Undergraduate researcher (2023. 3 ~ 2024. 10)<br><br>Web Programming<br>Aff:LG CNS</p>
+                            </div>
+                            <div class="img">
+                                <img src="../assets/member/alumni/이채운.jpg" alt="Chae-Un Lee">
+                                <p>Chae-Un Lee</p>
+                                <p class="sub-text">Undergraduate researcher (2023. 10 ~ 2024. 7 )<br><br>Machine learning<br>Front-end Programming</p>
+                            </div>
+                            <div class="img">
+                                <img src="../assets/member/alumni/2019이석호.jpg" alt="Seokho Lee">
+                                <p>Seok-ho Lee</p>
+                                <p class="sub-text">Undergraduate researcher (2023.10 ~ 2024.2)<br><br>Machine learning<br>System engineering<br></p>
+                            </div>
+                            <div class="img">
+                                <img src="../assets/member/alumni/2018허민녕.jpg" alt="Min-young Her">
+                                <p>Min-young Her</p>
+                                <p class="sub-text">Undergraduate researcher (2023. 9~12)<br><br>Machine learning<br>Data mining<br>Aff: BNP Paribas Cardif</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="img">
-                        <img src="../assets/member/Goodwill.jpg" alt="Goodwill Erasmo Ndomba">
-                        <p>Goodwill Erasmo Ndomba</p>
-                        <p class="sub-text">Master degree (2025. 2)<br><br>Machine learning<br>NLP</p>
-                    </div>
-                    <div class="img">
-                        <img src="../assets/member/2018이승동.jpg" alt="SeungDong Lee">
-                        <p>Seung-Dong Lee</p>
-                        <p class="sub-text">Master degree (2025. 2)<br><br>NLP<br>Game programming</p>
-                    </div>
-                    <div class="img">
-                        <img src="../assets/member/alumni/2019박정현.png" alt="Jung-Hyun Park">
-                        <p>Jung-Hyun Park</p>
-                        <p class="sub-text">Undergraduate researcher (2023. 3 ~ 2024. 10)<br><br>Web Programming<br>Aff:LG CNS</p>
-                    </div>
-                    <div class="img">
-                        <img src="../assets/member/alumni/이채운.jpg" alt="Chae-Un Lee">
-                        <p>Chae-Un Lee</p>
-                        <p class="sub-text">Undergraduate researcher (2023. 10 ~ 2024. 7 )<br><br>Machine learning<br>Front-end Programming</p>
-                    </div>
-                    <div class="img">
-                        <img src="../assets/member/alumni/2019이석호.jpg" alt="Seokho Lee">
-                        <p>Seok-ho Lee</p>
-                        <p class="sub-text">Undergraduate researcher (2023.10 ~ 2024.2)<br><br>Machine learning<br>System engineering<br></p>
-                    </div>
-                    <div class="img">
-                        <img src="../assets/member/alumni/2018허민녕.jpg" alt="Min-young Her">
-                        <p>Min-young Her</p>
-                        <p class="sub-text">Undergraduate researcher (2023. 9~12)<br><br>Machine learning<br>Data mining<br>Aff: BNP Paribas Cardif</p>
-                    </div>
-                    <div class="img">
-                        <img src="../assets/member/alumni/gati.jpg" alt="Gati Lother Martin">
-                        <p>Gati Lother Martin</p>
-                        <p class="sub-text">Master's degree (2022. 2)<br><br>Deep learning<br>Aff: PhD Course</p>
-                    </div>
-                    <div class="img">
-                        <img src="../assets/member/alumni/dh_kim.jpg" alt="Da-hye Kim">
-                        <p>Da-hye Kim</p>
-                        <p class="sub-text">Master's degree (2022. 2)<br><br>Machine learning<br>Chatbot<br>Aff: Frugal Solution(에프에스)</p>
-                    </div>
-                    <div class="img">
-                        <img src="../assets/member/alumni/HNK2.jpg" alt="Han-na Kim">
-                        <p>Han-na Kim</p>
-                        <p class="sub-text">Master's degree (2020. 8)<br><br>Data mining for healthcare<br>Aff: GS ITM( https://www.gsitm.com/ )</p>
-                    </div>
-                    <div class="img">
-                        <img src="../assets/member/alumni/MJJ.jpg" alt="Min-jun Jeon">
-                        <p>Min-jun Jeon</p>
-                        <p class="sub-text">Master's degree (2020. 8)<br><br>Machine learning<br>Artificial intelligence<br>Aff: Pharmcadd(팜캐드)( http://pharmcadd.com/ )</p>
-                    </div>
-                    <div class="img">
-                        <img src="../assets/member/alumni/HNK.jpg" alt="Han-nah Kim">
-                        <p>Han-nah Kim</p>
-                        <p class="sub-text">Master's degree (2020. 2)<br><br>Text mining<br>Aff: Saltlux(솔트룩스)( http://saltlux.com/index.do )</p>
-                    </div>
-                    <div class="img">
-                        <img src="../assets/member/alumni/DKS.jpg" alt="Dae-Kyung Sung">
-                        <p>Dae-Kyung Sung</p>
-                        <p class="sub-text">Research assistant<br><br> Artificial intelligence<br>Server programming<br>Aff: (주)Haa for research( http://www.haafor.com/ )</p>
+
+                    <div class="first-gen-area">
+                        <div class="generation-title">
+                            <div class="p-topic">
+                                1st Generation
+                            </div>
+                        </div>
+                        <div class="img">
+                            <img src="../assets/member/alumni/gati.jpg" alt="Gati Lother Martin">
+                            <p>Gati Lother Martin</p>
+                            <p class="sub-text">Master's degree (2022. 2)<br><br>Deep learning<br>Aff: PhD Course</p>
+                        </div>
+                        <div class="img">
+                            <img src="../assets/member/alumni/dh_kim.jpg" alt="Da-hye Kim">
+                            <p>Da-hye Kim</p>
+                            <p class="sub-text">Master's degree (2022. 2)<br><br>Machine learning<br>Chatbot<br>Aff: Frugal Solution(에프에스)</p>
+                        </div>
+                        <div class="img">
+                            <img src="../assets/member/alumni/HNK2.jpg" alt="Han-na Kim">
+                            <p>Han-na Kim</p>
+                            <p class="sub-text">Master's degree (2020. 8)<br><br>Data mining for healthcare<br>Aff: GS ITM( https://www.gsitm.com/ )</p>
+                        </div>
+                        <div class="img">
+                            <img src="../assets/member/alumni/MJJ.jpg" alt="Min-jun Jeon">
+                            <p>Min-jun Jeon</p>
+                            <p class="sub-text">Master's degree (2020. 8)<br><br>Machine learning<br>Artificial intelligence<br>Aff: Pharmcadd(팜캐드)( http://pharmcadd.com/ )</p>
+                        </div>
+                        <div class="img">
+                            <img src="../assets/member/alumni/HNK.jpg" alt="Han-nah Kim">
+                            <p>Han-nah Kim</p>
+                            <p class="sub-text">Master's degree (2020. 2)<br><br>Text mining<br>Aff: Saltlux(솔트룩스)( http://saltlux.com/index.do )</p>
+                        </div>
+                        <div class="img">
+                            <img src="../assets/member/alumni/DKS.jpg" alt="Dae-Kyung Sung">
+                            <p>Dae-Kyung Sung</p>
+                            <p class="sub-text">Research assistant<br><br> Artificial intelligence<br>Server programming<br>Aff: (주)Haa for research( http://www.haafor.com/ )</p>
+                        </div>
+
                     </div>
                 </div>
             </div>
