modify alumni titles

--- a/people/alumni.html
+++ b/people/alumni.html
@@ -88,7 +88,7 @@
                         <div class="second-master">
                             <div class="master-title">
                                 <div class="p-topic">
-                                    Mastered
+                                    Master
                                 </div>
                             </div>
                             <div class="img">
@@ -105,7 +105,7 @@
                         <div class="second-undergraduate">
                             <div class="undergraduate-title">
                                 <div class="p-topic">
-                                    Undergraduated
+                                    Undergraduate
                                 </div>
                             </div>
                             <div class="img">
