--- a/people/student.html
+++ b/people/student.html
@@ -146,6 +146,11 @@
                         <p>Tae-Hyun Woo</p>
                         <p class="sub-text">Undergraduate researcher (2025. 3~)<br><br>Security<br></p>
                     </div>   
+                    <div class="img">
+                        <img src="../assets/member/2022문서영.jpg" alt="Seo-Young Moon">
+                        <p>Seo-Young Moon</p>
+                        <p class="sub-text">Undergraduate researcher (2025. 6~)<br><br>NLP, Artificial Intelligence<br></p>
+                    </div>   
                 </div>
             </div>
             <div class="margin"></div>
