--- a/publication/present.html
+++ b/publication/present.html
@@ -86,6 +86,7 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>[국내학술대회]</p> 여은성, 황준하, 김하늘, 홍민경, 김초명, 김정민, 김봉재, 정영섭, "발달지연 아동의 부모 인터뷰를 이용한 PCT 점수 예측 모델," 한국방송미디어공학회 하계학술대회 논문집, Jeju, Korea, pp.1394-1397, June 22-24, 2025. (presentation: June 24) [ACK: IITP개성AI(50%), CRC2023(50%)]</li>
                             <li><p>[SCI]</p> JunHa Hwang, SeungDong Lee, HaNeul Kim, Young-Seob Jeong, "Subset selection for domain adaptive pre-training of language model," Scientific reports, Vol. 15, Issue 9539, pp.1-9, March 19, 2025. (ISSN: 2045-2322, Publisher: NATURE PORTFOLIO) [ACK: IITP개성AI(50%), 중점연구소컴정연2020(50%)]</li>
                             <li><p>[SCI]</p> Gati Lother Martin, Sang-Min Lee, Jong-Hyun Kim, Young-Seob Jeong, Ah Reum Kang, Jiyoung Woo, "Deep Defense Against Mal-Doc: Utilizing Transformer and SeqGAN for Detecting and Classifying Document Type Malware," Applied Sciences, Vol. 15, Issue 6, pp.1-23, March 10, 2025. (ISSN: 2076-3417, Publisher: MDPI) [ACK: None]</li>
                             <li><p>[국제학술대회]</p> Byungil Yun, Dahye Kim, Yungjin Kim, Young-Seob Jeong, "Sentence Embedding Using Supervised Contrastive Learning on Hierarchical Categories," in Proceedings of IEEE International Conference on Big Data and Smart Computing (BigComp), Kota Kinabalu, Malaysia, pp.136-139, February 9-12, 2025. (presentation: February 11) [ACK: None]</li>
@@ -163,6 +164,7 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>[등록]</p> 발명인: 정영섭, 강아름; 발명의 명칭: 파일 악성코드 검출 장치; 등록일: 2025-06-18; 등록번호: 10-2823879 [ACK: NRF2020]</li>
                             <li><p>[등록]</p> 발명인: 정영섭; 발명의 명칭: 유리 표면의 성에 제거장치; 등록일: 2023-08-25; 등록번호: 10-2572775 [ACK: NRF2020]</li>
                         </ul>
                     </div>
@@ -195,6 +197,8 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>CRC2023:</p> 감성지능형 아동케어시스템 융합연구센터 (전체기간: 2023.06.01~2030.02.28)</li>
+
                             <li><p>GrandICT연구센터:</p> 디지털선도기술핵심인재양성</li>
 
                             <li><p>중점연구소컴정연2020:</p> 충북대 중점연구소 사업 (컴퓨터정보통신연구소) (전체기간: 2020.06.01~2029.05.31)</li>
