modify privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -161,6 +161,14 @@
         </li>
         -->
         <li>
+            
+            <p>
+                <strong>Website:</strong> 조기진통 감지 및 스트레스 완화, accessible from 
+                <a href="https://dai427.cbnu.ac.kr/" rel="external nofollow noopener" target="_blank">https://dai427.cbnu.ac.kr/</a>
+            </p>
+            
+        </li>
+        <li>
             <p>
                 <strong>You:</strong> The individual accessing or using the Service, or the company, or other legal entity on 
                 behalf of which such individual is accessing or using the Service, as applicable.
