--- a/index.html
+++ b/index.html
@@ -120,19 +120,20 @@
             <blockquote class="projects">
                 <p>On Going</p>
                 <ul>
-                    <li>사이버전장 방어체계 강화를 위한 탐지 모델 연구, 2024.6.1 ~ 2024.11.30, 한국전자통신연구원</li>
+                    <li>감성 지능형 아동케어시스템 융합연구센터, 2023.6.1 ~ 2030.2.28, 과학기술정보통신부</li>
                     <li>다중이용시설 화재 안전관리 AI 솔루션 개발, 2023.9.1 ~ 2025.12.31, 대전정보문화산업진흥원</li>
                     <li>지역거주 잠재적 조기진통 임부를 위한 AI기반 원외 서비스 앱 개발, 2023.3.1 ~ 2028.2.29, 교육부</li>
-                    <li>인간과 협업하는 딥러닝 기반 AI 소설 생성 융합 연구, 2022.7.1 ~ 2025.6.30, 교육부</li>
                     <li>개성 형성이 가능한 에이전트 플랫폼 기술 개발, 2022.4.1 ~ 2026.12.31, 과학기술정보통신부</li>
                     <li>신재생 에너지를 활용한 자율주행용 데이터 네트워킹 AI 엔진/부품 기술개발, 2020.6.1 ~ 2029.5.31, 교육부</li>
-                    <li>Adaptive Emotional Dialog Agent for One Person Household, 2020.6 ~ 2025.5, NRF</li>
                 </ul>
                 
             </blockquote>
             <blockquote class="projects">
                 <p>Done</p>
                 <ul>
+                    <li>Adaptive Emotional Dialog Agent for One Person Household, 2020.6 ~ 2025.5, NRF</li>
+                    <li>인간과 협업하는 딥러닝 기반 AI 소설 생성 융합 연구, 2022.7.1 ~ 2025.6.30, 교육부</li>
+                    <li>사이버전장 방어체계 강화를 위한 탐지 모델 연구, 2024.6.1 ~ 2024.11.30, 한국전자통신연구원</li>
                     <li>인공지능 학습용 데이터 구축 사업, 2022.6.1 ~ 2022.12.31, 과학기술정보통신부</li>
                     <li>실시간 탐지를 위한 딥러닝 기반 문서형 악성코드 분석 기능 개발, 2022.5.26 ~ 2022.10.20, 한국전자통신연구원</li>
                     <li>Big data-based development of novel solid forms for P-CAB drugs, 2020.4 ~ 2021.12, IITP</li>
