--- a/publication/present.html
+++ b/publication/present.html
@@ -176,6 +176,7 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>[출원]</p> 발명인: 정영섭, 김미서; 발명의 명칭: 열화상 카메라 기반 화재 감지 시스템 및 방법; 출원일: 2025-08-06; 출원번호: 10-2025-0108303 [ACK: GrandICT연구센터]</li>
                             <li><p>[출원]</p> 발명인: 정영섭, 김태호, 김민우, 박영찬, 변윤환; 발명의 명칭: 음성 분석에 의한 자막 생성 방법 및 이를 수행하기 위한 컴퓨팅 장치; 출원일: 2025-07-28; 출원번호: 10-2025-0102537 [ACK: 중점연구소컴정연2020]</li>
                             <li><p>[출원]</p> 발명인: 정영섭, 김은진, 황준하, 이승동; 발명의 명칭: 발화 데이터를 이용한 대규모 언어 모델의 학습 방법 및 이를 수행하기 위한 컴퓨팅 장치; 출원일: 2024-11-15; 출원번호: 10-2024-0162771 [ACK: 중점연구소컴정연2020]</li>
                             <li><p>[출원]</p> 발명인: 정영섭, 이승동, 김은진, 황준하; 발명의 명칭: 언어 모델 학습 방법 및 이를 수행하기 위한 컴퓨팅 장치; 출원일: 2024-10-15; 출원번호: 10-2024-0140736 [ACK: GrandICT연구센터]</li>
