--- a/publication/present.html
+++ b/publication/present.html
@@ -166,6 +166,7 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>[등록]</p> 발명인: 정영섭; 발명의 명칭: 방송 콘텐츠 재생 중 피드백을 통해 관리하는 치매 관리 서버 및 이를 이용한 치매 관리 방법; 등록일: 2025-08-11; 등록번호: 10-2846289 [ACK: NRF2020]</li>
                             <li><p>[등록]</p> 발명인: 정영섭, 강아름; 발명의 명칭: 파일 악성코드 검출 장치; 등록일: 2025-06-18; 등록번호: 10-2823879 [ACK: NRF2020]</li>
                             <li><p>[등록]</p> 발명인: 정영섭; 발명의 명칭: 유리 표면의 성에 제거장치; 등록일: 2023-08-25; 등록번호: 10-2572775 [ACK: NRF2020]</li>
                         </ul>
