update alumni & add new member

--- a/people/alumni.html
+++ b/people/alumni.html
@@ -99,7 +99,12 @@
                             <div class="img">
                                 <img src="../assets/member/2018이승동.jpg" alt="SeungDong Lee">
                                 <p>Seung-Dong Lee</p>
-                                <p class="sub-text">Master degree (2025. 2)<br><br>NLP<br>Game programming</p>
+                                <p class="sub-text">Master degree (2025. 2)<br><br>NLP<br>Game programming<br>Aff: Frugal Solution</p>
+                            </div>
+                            <div class="img">
+                                <img src="../assets/member/KYUNG-ROK_YOO.jpg" alt="KYUNG-ROK YOO">
+                                <p>KYUNG-ROK YOO</p>
+                                <p class="sub-text">Master degree (2025. 2)<br><br>NLP<br>Automated Response Systems<br>Aff: Office of Information Services (정보화본부), Chungbuk National University</p>
                             </div>
                         </div>
                         <div class="second-undergraduate">
