--- a/publication/present.html
+++ b/publication/present.html
@@ -86,7 +86,7 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
-                            <li><p>[국제학술대회]</p> Jeung-Im Kim, So-Hee Park, Young-Seob Jeong, "Biweekly Monitoring of Pregnancy Stress and Preterm Birth Risk Using an AI-Based Mobile App with Wearable Integration," in Proceedings of UTokyo Nursing International Conference (UTNIC) 2025, pp.36-36, August 6, 2025. (presentation: August 6) [ACK: None]</li>
+                            <li><p>[국제학술대회]</p> Jeung-Im Kim, So-Hee Park, Young-Seob Jeong, "Biweekly Monitoring of Pregnancy Stress and Preterm Birth Risk Using an AI-Based Mobile App with Wearable Integration," in Proceedings of UTokyo Nursing International Conference (UTNIC) 2025, The University of Tokyo Hospital, Japan, pp.36-36, August 6, 2025. (presentation: August 6) [ACK: None]</li>
                             <li><p>[SCI]</p> Eun-Jin Kim, Chung-Hwan Joe, Misun Yun, Young-Seob Jeong, "Generative Language Models for Personality-Based Utterances in Novels: A Character Clustering Approach," Applied Sciences, Vol. 15, Issue 8136, pp.1-17, July 22, 2025. (ISSN: 2076-3417, Publisher: MDPI) [ACK: NRF소설(50%)]</li>
                             <li><p>[국내학술대회]</p> 여은성, 황준하, 김하늘, 홍민경, 김초명, 김정민, 김봉재, 정영섭, "발달지연 아동의 부모 인터뷰를 이용한 PCT 점수 예측 모델," 한국방송미디어공학회 하계학술대회 논문집, Jeju, Korea, pp.1394-1397, June 22-24, 2025. (presentation: June 24) [ACK: IITP개성AI(50%), CRC2023(50%)]</li>
                             <li><p>[국내저널]</p> Seunghyun Choi, Young-Seob Jeong, "Detection of Disastor Through Language Analysis of Social Network," 컴퓨터정보통신연구, 제33권, 제1호, pp.1-6, May, 2025. [ACK: NRF소설(50%), NRF2020(50%)]</li>
