--- a/people/alumni.html
+++ b/people/alumni.html
@@ -138,6 +138,16 @@
                                 <p>Min-young Her</p>
                                 <p class="sub-text">Undergraduate researcher (2023. 9~12)<br><br>Machine learning<br>Data mining<br>Aff: BNP Paribas Cardif</p>
                             </div>
+                            <div class="img">
+                                <img src="../assets/member/2020여은성.png" alt="Eun-Sung Yeo">
+                                <p>Eun-Sung Yeo</p>
+                                <p class="sub-text">Undergraduate researcher (2024. 4~)<br><br>Machine learning<br>Computer Vision</p>
+                            </div>
+                            <div class="img">
+                                <img src="../assets/member/2020공지혁.jpg" alt="Jee-Hyeok Kong">
+                                <p>Jee-Hyeok Kong</p>
+                                <p class="sub-text">Undergraduate researcher (2024. 11~)<br><br>Back-end Programming<br></p>
+                            </div>
                         </div>
                     </div>
 
