--- a/people/student.html
+++ b/people/student.html
@@ -120,17 +120,7 @@
                 Intern
             </div>
             <div class="member-area">
-                <div class="member-imgs">
-                    <div class="img">
-                        <img src="../assets/member/2020여은성.png" alt="Eun-Sung Yeo">
-                        <p>Eun-Sung Yeo</p>
-                        <p class="sub-text">Undergraduate researcher (2024. 4~)<br><br>Machine learning<br>Computer Vision</p>
-                    </div>
-                    <div class="img">
-                        <img src="../assets/member/2020공지혁.jpg" alt="Jee-Hyeok Kong">
-                        <p>Jee-Hyeok Kong</p>
-                        <p class="sub-text">Undergraduate researcher (2024. 11~)<br><br>Back-end Programming<br></p>
-                    </div>           
+                <div class="member-imgs">           
                     <div class="img">
                         <img src="../assets/member/2023민태원.jpg" alt="Tae-Won Min">
                         <p>Tae-Won Min</p>
@@ -151,6 +141,11 @@
                         <p>Seo-Young Moon</p>
                         <p class="sub-text">Undergraduate researcher (2025. 6~)<br><br>NLP, Artificial Intelligence<br></p>
                     </div>   
+                    <div class="img">
+                        <img src="../assets/member/Jong-Chan-Lee.jpg" alt="Jong-Chan Lee">
+                        <p>Jong-Chan Lee</p>
+                        <p class="sub-text">Undergraduate researcher (2025. 9~)<br><br>NLP, Computer Vision<br></p>
+                    </div> 
                 </div>
             </div>
             <div class="margin"></div>
