--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
             <blockquote class="projects">
                 <p>On Going</p>
                 <ul>
+                    <li>기질과 성격을 갖춘 생성형 언어모델 구축, 2025.09.01~2028.08.31, NRF </li>
                     <li>감성 지능형 아동케어시스템 융합연구센터, 2023.6.1 ~ 2030.2.28, 과학기술정보통신부</li>
                     <li>다중이용시설 화재 안전관리 AI 솔루션 개발, 2023.9.1 ~ 2025.12.31, 대전정보문화산업진흥원</li>
                     <li>지역거주 잠재적 조기진통 임부를 위한 AI기반 원외 서비스 앱 개발, 2023.3.1 ~ 2028.2.29, 교육부</li>
