--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
 
         <div class="topic">Projects
-            <p>Our laboratory undertakes the following projects.</p>
+            <p>This laboratory is currently carrying out the following projects and has also conducted numerous other industry-academia collaboration projects (not listed below due to their large number).</p>
         </div>
 
         <div class="research-area">
