--- a/people/alumni.html
+++ b/people/alumni.html
@@ -116,12 +116,12 @@
                             <div class="img">
                                 <img src="../assets/member/2020여은성.png" alt="Eun-Sung Yeo">
                                 <p>Eun-Sung Yeo</p>
-                                <p class="sub-text">Undergraduate researcher (2024. 4~)<br><br>Machine learning<br>Computer Vision</p>
+                                <p class="sub-text">Undergraduate researcher (2024. 4 ~ 2025. 8)<br><br>Machine learning<br>Computer Vision</p>
                             </div>
                             <div class="img">
                                 <img src="../assets/member/2020공지혁.jpg" alt="Jee-Hyeok Kong">
                                 <p>Jee-Hyeok Kong</p>
-                                <p class="sub-text">Undergraduate researcher (2024. 11~)<br><br>Back-end Programming<br></p>
+                                <p class="sub-text">Undergraduate researcher (2024. 11 ~ 2025. 8)<br><br>Back-end Programming<br></p>
                             </div>
                             <div class="img">
                                 <img src="../assets/member/alumni/2022심현석.jpg" alt="Hyeon-Seok Sim">
