--- a/publication/present.html
+++ b/publication/present.html
@@ -178,6 +178,7 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>[출원]</p> 발명인: 정영섭, 김하늘; 발명의 명칭: 대규모 언어 모델 기반 성격 요소 인식 및 성격 반영 문장 생성 방법 및 이를 수행하기 위한 장치; 출원일: 2025-10-14; 출원번호: 10-2025-0148169 [ACK: GrandICT연구센터]</li>
                             <li><p>[출원]</p> 발명인: 정영섭; 발명의 명칭: 교통사고 방지를 위한 차량용 신호 표시 장치; 출원일: 2025-09-17; 출원번호: 10-2025-0133892 [ACK: 중점연구소컴정연2020]</li>
                             <li><p>[출원]</p> 발명인: 정영섭, 최희진, 박지영, 이진, 이은지; 발명의 명칭: 기상 정보에 따른 경로 제공 방법 및 이를 수행하기 위한 컴퓨팅 장치; 출원일: 2025-09-02; 출원번호: 10-2025-0124445 [ACK: 중점연구소컴정연2020]</li>
                             <li><p>[출원]</p> 발명인: 정영섭, 김미서; 발명의 명칭: 열화상 카메라 기반 화재 감지 시스템 및 방법; 출원일: 2025-08-06; 출원번호: 10-2025-0108303 [ACK: GrandICT연구센터]</li>
