--- a/people/student.html
+++ b/people/student.html
@@ -85,7 +85,7 @@
                     <div class="img">
                         <img src="../assets/member/2018김은진.jpg" alt="Eun-Jin Kim">
                         <p>Eun-Jin Kim</p>
-                        <p class="sub-text">Integrated Master and PhD course (2023. 3~)<br><br>Artificial intelligence<br>Machine learning</p>
+                        <p class="sub-text">Integrated Master and PhD course (2023. 3~)<br><br>Large language models<br>Prompt engineering & Instruction tuning</p>
                     </div>
                     <div class="img">
                         <img src="../assets/member/2018황준하.jpg" alt="JunHa Hwang">
