--- a/publication/present.html
+++ b/publication/present.html
@@ -85,7 +85,8 @@
                 </div>
                 <div class="publication">
                     <div class="media-body">
-                        <ul><li><p>[SCI]</p> Eun-Jin Kim, Young-Seob Jeong, "Efficient Malware Detection in HWP Byte Sequences Using Pooling-Based Model," Applied Sciences, Vol. 15, Issue 21, pp.1-10, October 28, 2025. (ISSN: 2076-3417, Publisher: MDPI) [ACK: 중점연구소컴정연2020(100%)] </li>
+                        <ul><li><p>[국내학술대회]</p> 김은진, 홍경훈, 정영섭, "언어발달장애 아동의 언어 중재를 위한 생성형 언어모델 기반 대화 시스템," 한국통신학회 추계종합학술발표회 논문집, 경주, Korea, November 20-22, 2025. (presentation: November 21) [ACK: NRF2025,CRC2023]</li>
+                            <li><p>[SCI]</p> Eun-Jin Kim, Young-Seob Jeong, "Efficient Malware Detection in HWP Byte Sequences Using Pooling-Based Model," Applied Sciences, Vol. 15, Issue 21, pp.1-10, October 28, 2025. (ISSN: 2076-3417, Publisher: MDPI) [ACK: 중점연구소컴정연2020(100%)] </li>
                             <li><p>[SCI]</p> Eun-Jin Kim, Yun-Kyung Lee, Sang-Min Lee, Jeong-Nyeo Kim, Ah Reum Kang, Mi-seo Kim, Young-Seob Jeong, "Malware detection using pre-trained transformer encoder with byte sequences," PLoS One, Vol. 20, Issue 10, pp.1-16, October 13, 2025. (ISSN: 1932-6203, Q2, Publisher: PUBLIC LIBRARY SCIENCE) [ACK: 중점연구소컴정연2020(50%)]</li>
                             <li><p>[국제학술대회]</p> Jeung-Im Kim, So-Hee Park, Young-Seob Jeong, "Biweekly Monitoring of Pregnancy Stress and Preterm Birth Risk Using an AI-Based Mobile App with Wearable Integration," in Proceedings of UTokyo Nursing International Conference (UTNIC) 2025, The University of Tokyo Hospital, Japan, pp.36-36, August 6, 2025. (presentation: August 6) [ACK: None]</li>
                             <li><p>[SCI]</p> Eun-Jin Kim, Chung-Hwan Joe, Misun Yun, Young-Seob Jeong, "Generative Language Models for Personality-Based Utterances in Novels: A Character Clustering Approach," Applied Sciences, Vol. 15, Issue 8136, pp.1-17, July 22, 2025. (ISSN: 2076-3417, Publisher: MDPI) [ACK: NRF소설(50%)]</li>
@@ -209,6 +210,8 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>NRF2025:</p> 과학기술정보통신부 기초연구사업 (중견연구 - 창의연구형) (전체기간: 2025.9~2028.8)</li>
+
                             <li><p>CRC2023:</p> 감성지능형 아동케어시스템 융합연구센터 (전체기간: 2023.06.01~2030.02.28)</li>
 
                             <li><p>GrandICT연구센터:</p> 디지털선도기술핵심인재양성</li>
