modify main introduction line

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="margin"></div>
         
         <div class="hello">Welcome to the DAI LAB</div>
-        <div class="info"><h4>Data analysis & Artificial Intelligence laboratory, </h4>department of Computer engineering, Chungbuk National University, South Korea. We are focusing on two techniques: deep learning and topic modeling.</div>
+        <div class="info"><h4>Data analysis & Artificial Intelligence laboratory, </h4>department of Computer engineering, Chungbuk National University, South Korea.<br> We study core techniques for building and tuning language models and investigate how these techniques can be applied to various service domains.</div>
 
         <div class="empty">
             <div class="topic">Lab's Interests
