add new member - Jin Yu

--- a/people/student.html
+++ b/people/student.html
@@ -111,10 +111,14 @@
                         <img src="../assets/member/김하늘.jpg" alt="Haneul Kim">
                         <p>Ha-neul Kim</p>
                         <p class="sub-text">Master course (2024. 3~)<br><br>Computer Vision<br>NLP</p>
-                    </div>                    
+                    </div>    
+                    <div class="img">
+                        <img src="../assets/member/Jin-Yu.jpeg" alt="Jin Yu">
+                        <p>Jin Yu</p>
+                        <p class="sub-text">Master course (2026. 3~)<br><br>NLP<br>Machinee Learning</p>
+                    </div>
                 </div>
             </div>
-
 
             <div class="m-topic">
                 Intern
