update student status

--- a/people/student.html
+++ b/people/student.html
@@ -71,17 +71,25 @@
             <div class="overlay"></div>
 
             <div class="margin"></div>
-            
+
             <div class="m-topic">
-                Ph.D.
+                Post Doc
             </div>
             <div class="member-area">
                 <div class="member-imgs">
                     <div class="img">
                         <img src="../assets/member/medard_2.jpg" alt="Medard Edmund Mswahili">
                         <p>Medard Edmund Mswahili</p>
-                        <p class="sub-text">PhD course (2022. 3~)<br><br>Machine learning<br>Data mining</p>
+                        <p class="sub-text">Post Doc (2026. 3~)<br><br>Machine learning<br>Data mining</p>
                     </div>
+                </div>
+            </div>
+            
+            <div class="m-topic">
+                Ph.D. course
+            </div>
+            <div class="member-area">
+                <div class="member-imgs">
                     <div class="img">
                         <img src="../assets/member/2018김은진.jpg" alt="Eun-Jin Kim">
                         <p>Eun-Jin Kim</p>
@@ -92,31 +100,31 @@
                         <p>Jun-Ha Hwang</p>
                         <p class="sub-text">PhD course (2025. 3~)<br><br>Language models<br>Artificial intelligence</p>
                     </div>
+                    <div class="img">
+                        <img src="../assets/member/김하늘.jpg" alt="Haneul Kim">
+                        <p>Ha-neul Kim</p>
+                        <p class="sub-text">PhD course (2026. 3~)<br><br>Computer Vision<br>NLP</p>
+                    </div> 
                 </div>
             </div>
 
 
 
             <div class="m-topic">
-                M.S.
+                M.S. course
             </div>
             <div class="member-area">
-                <div class="member-imgs">
-                    <div class="img">
-                        <img src="../assets/member/2020김미서.jpg" alt="Miseo Kim">
-                        <p>Mi-seo Kim</p>
-                        <p class="sub-text">Master course (2024. 3~)<br><br>Machine learning<br>Computer Vision</p>
-                    </div>
-                    <div class="img">
-                        <img src="../assets/member/김하늘.jpg" alt="Haneul Kim">
-                        <p>Ha-neul Kim</p>
-                        <p class="sub-text">Master course (2024. 3~)<br><br>Computer Vision<br>NLP</p>
-                    </div>    
+                <div class="member-imgs">   
                     <div class="img">
                         <img src="../assets/member/Jin-Yu.jpeg" alt="Jin Yu">
                         <p>Jin Yu</p>
                         <p class="sub-text">Master course (2026. 3~)<br><br>NLP<br>Machinee Learning</p>
                     </div>
+                    <div class="img">
+                        <img src="../assets/member/2023민태원.jpg" alt="Tae-Won Min">
+                        <p>Tae-Won Min</p>
+                        <p class="sub-text">Intergrated Undergraduate and Master course (2026. 9~)<br><br>Machine learning<br>NLP<br></p>
+                    </div> 
                 </div>
             </div>
 
@@ -124,12 +132,7 @@
                 Intern
             </div>
             <div class="member-area">
-                <div class="member-imgs">           
-                    <div class="img">
-                        <img src="../assets/member/2023민태원.jpg" alt="Tae-Won Min">
-                        <p>Tae-Won Min</p>
-                        <p class="sub-text">Undergraduate researcher (2025. 3~)<br><br>Machine learning<br>NLP<br></p>
-                    </div>       
+                <div class="member-imgs">                 
                     <div class="img">
                         <img src="../assets/member/2023엄지현.jpg" alt="Ji-Hyeon Eom">
                         <p>Ji-Heyon Eom</p>
