--- a/people/alumni.html
+++ b/people/alumni.html
@@ -106,6 +106,11 @@
                                 <p>KYUNG-ROK YOO</p>
                                 <p class="sub-text">Master degree (2025. 2)<br><br>NLP<br>Automated Response Systems<br>Aff: Office of Information Services (정보화본부), Chungbuk National University</p>
                             </div>
+                            <div class="img">
+                                <img src="../assets/member/2020김미서.jpg" alt="Miseo Kim">
+                                <p>Mi-seo Kim</p>
+                                <p class="sub-text">Master degreee (2026. 2~)<br><br>Machine learning<br>Computer Vision</p>
+                            </div>
                         </div>
                         <div class="second-undergraduate">
                             <div class="undergraduate-title">
