modify alumni's profile

--- a/people/alumni.html
+++ b/people/alumni.html
@@ -109,7 +109,7 @@
                             <div class="img">
                                 <img src="../assets/member/2020김미서.jpg" alt="Miseo Kim">
                                 <p>Mi-seo Kim</p>
-                                <p class="sub-text">Master degreee (2026. 2~)<br><br>Machine learning<br>Computer Vision</p>
+                                <p class="sub-text">Master degree (2026. 2)<br><br>Machine learning<br>Computer Vision</p>
                             </div>
                         </div>
                         <div class="second-undergraduate">
