--- a/people/student.html
+++ b/people/student.html
@@ -146,17 +146,17 @@
                     <div class="img">
                         <img src="../assets/member/2022문서영.jpg" alt="Seo-Young Moon">
                         <p>Seo-Young Moon</p>
-                        <p class="sub-text">Undergraduate researcher (2025. 6~)<br><br>NLP, Artificial Intelligence<br></p>
+                        <p class="sub-text">Undergraduate researcher (2025. 6~)<br><br>NLP<br> Artificial Intelligence<br></p>
                     </div>   
                     <div class="img">
                         <img src="../assets/member/Jong-Chan-Lee.jpg" alt="Jong-Chan Lee">
                         <p>Jong-Chan Lee</p>
-                        <p class="sub-text">Undergraduate researcher (2025. 9~)<br><br>NLP, Computer Vision<br></p>
+                        <p class="sub-text">Undergraduate researcher (2025. 9~)<br><br>NLP<br> Computer Vision<br></p>
                     </div> 
                     <div class="img">
                         <img src="../assets/member/2023김채은.jpeg" alt="Chae-Eun Kim">
                         <p>Chae-Eun Kim</p>
-                        <p class="sub-text">Undergraduate researcher (2025. 9~)<br><br>Security, Artificial Intelligence<br></p>
+                        <p class="sub-text">Undergraduate researcher (2025. 9~)<br><br>Security<br> Artificial Intelligence<br></p>
                     </div> 
                 </div>
             </div>
