--- a/people/student.html
+++ b/people/student.html
@@ -80,7 +80,7 @@
                     <div class="img">
                         <img src="../assets/member/medard_2.jpg" alt="Medard Edmund Mswahili">
                         <p>Medard Edmund Mswahili</p>
-                        <p class="sub-text">Post Doc (2026. 3~)<br><br>Machine learning<br>Data mining</p>
+                        <p class="sub-text">Post Doc (2026. 3~)<br><br>Machine Learning<br>Data Mining</p>
                     </div>
                 </div>
             </div>
@@ -93,12 +93,12 @@
                     <div class="img">
                         <img src="../assets/member/2018김은진.jpg" alt="Eun-Jin Kim">
                         <p>Eun-Jin Kim</p>
-                        <p class="sub-text">Integrated Master and PhD course (2023. 3~)<br><br>Large language models<br>Prompt engineering</p>
+                        <p class="sub-text">Integrated Master and PhD course (2023. 3~)<br><br>Large Language Models<br>Prompt Engineering</p>
                     </div>
                     <div class="img">
                         <img src="../assets/member/2018황준하.jpg" alt="JunHa Hwang">
                         <p>Jun-Ha Hwang</p>
-                        <p class="sub-text">PhD course (2025. 3~)<br><br>Language models<br>Artificial intelligence</p>
+                        <p class="sub-text">PhD course (2025. 3~)<br><br>Language Models<br>Artificial Intelligence</p>
                     </div>
                     <div class="img">
                         <img src="../assets/member/김하늘.jpg" alt="Haneul Kim">
@@ -118,12 +118,12 @@
                     <div class="img">
                         <img src="../assets/member/Jin-Yu.jpeg" alt="Jin Yu">
                         <p>Jin Yu</p>
-                        <p class="sub-text">Master course (2026. 3~)<br><br>NLP<br>Machinee Learning</p>
+                        <p class="sub-text">Master course (2026. 3~)<br><br>NLP<br>Machine Learning</p>
                     </div>
                     <div class="img">
                         <img src="../assets/member/2023민태원.jpg" alt="Tae-Won Min">
                         <p>Tae-Won Min</p>
-                        <p class="sub-text">Intergrated Undergraduate and Master course (2026. 9~)<br><br>Machine learning<br>NLP<br></p>
+                        <p class="sub-text">Intergrated Undergraduate and Master course (2026. 9~)<br><br>Machine Learning<br>NLP<br></p>
                     </div> 
                 </div>
             </div>
