update student profile

--- a/people/student.html
+++ b/people/student.html
@@ -103,7 +103,7 @@
                     <div class="img">
                         <img src="../assets/member/김하늘.jpg" alt="Haneul Kim">
                         <p>Ha-neul Kim</p>
-                        <p class="sub-text">PhD course (2026. 3~)<br><br>Computer Vision<br>NLP</p>
+                        <p class="sub-text">PhD course (2026. 3~)<br><br>NLP<br>Security</p>
                     </div> 
                 </div>
             </div>
