add new profile to student

--- a/people/student.html
+++ b/people/student.html
@@ -121,6 +121,11 @@
                         <p class="sub-text">Master course (2026. 3~)<br><br>NLP<br>Machine Learning</p>
                     </div>
                     <div class="img">
+                        <img src="../assets/member/So-Yean-Shin.jpeg" alt="So Yean Shin">
+                        <p>So-Yean Shin</p>
+                        <p class="sub-text">Master course (2026. 3~)<br><br>Machine Learning</p>
+                    </div> 
+                    <div class="img">
                         <img src="../assets/member/2023민태원.jpg" alt="Tae-Won Min">
                         <p>Tae-Won Min</p>
                         <p class="sub-text">Intergrated Undergraduate and Master course (2027. 3~)<br><br>Machine Learning<br>NLP<br></p>
