--- a/publication/present.html
+++ b/publication/present.html
@@ -192,6 +192,7 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>[출원]</p> 발명인: 정영섭, 김은진; 발명의 명칭: 악성코드 탐지 장치 및 방법; 출원일: 2026-01-15; 출원번호: 10-2026-0008298 [ACK: RISE2025]</li>
                             <li><p>[출원]</p> 발명인: 정영섭, 김하늘; 발명의 명칭: 대규모 언어 모델 기반 성격 요소 인식 및 성격 반영 문장 생성 방법 및 이를 수행하기 위한 장치; 출원일: 2025-10-14; 출원번호: 10-2025-0148169 [ACK: GrandICT연구센터]</li>
                             <li><p>[출원]</p> 발명인: 정영섭; 발명의 명칭: 교통사고 방지를 위한 차량용 신호 표시 장치; 출원일: 2025-09-17; 출원번호: 10-2025-0133892 [ACK: 중점연구소컴정연2020]</li>
                             <li><p>[출원]</p> 발명인: 정영섭, 최희진, 박지영, 이진, 이은지; 발명의 명칭: 기상 정보에 따른 경로 제공 방법 및 이를 수행하기 위한 컴퓨팅 장치; 출원일: 2025-09-02; 출원번호: 10-2025-0124445 [ACK: 중점연구소컴정연2020]</li>
@@ -221,6 +222,8 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>RISE2025:</p>  지역혁신중심 대학지원체계(RISE) (전체기간: (1차)2025.5.16~2030.2.28, (2차)2025.10.2~2030.2.28)</li>
+
                             <li><p>NRF2025:</p> 과학기술정보통신부 기초연구사업 (중견연구 - 창의연구형) (전체기간: 2025.9~2028.8)</li>
 
                             <li><p>CRC2023:</p> 감성지능형 아동케어시스템 융합연구센터 (전체기간: 2023.06.01~2030.02.28)</li>
