update student profile

--- a/people/student.html
+++ b/people/student.html
@@ -98,7 +98,7 @@
                     <div class="img">
                         <img src="../assets/member/2018황준하.jpg" alt="JunHa Hwang">
                         <p>Jun-Ha Hwang</p>
-                        <p class="sub-text">PhD course (2025. 3~)<br><br>Language Models<br>Artificial Intelligence</p>
+                        <p class="sub-text">PhD course (2025. 3~)<br><br>Language Models<br>Artificial Intelligence<br><a href="https://iamjunhahwang.github.io/" target="_blank">https://iamjunhahwang.github.io/</a></p>
                     </div>
                     <div class="img">
                         <img src="../assets/member/김하늘.jpg" alt="Haneul Kim">
