--- a/publication/present.html
+++ b/publication/present.html
@@ -170,6 +170,7 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>[SW등록]</p> 정영섭, 민태원; 명칭: 심맘바(SimMamba); 저작물종류: 컴퓨터프로그램저작물>응용프로그램>과학기술; 저작자: 충북대학교 산학협력단; 창작연원일: 2025-07-07; 등록연월일: 2026-01-27; 등록번호: C-2026-005494 [ACK: RISE2025]</li>
                             <li><p>[SW등록]</p> 정영섭, 김하늘, 황준하; 명칭: 언어모델을 이용한 Multi-task learning(멀티태스크 러닝) 프레임워크; 저작물종류: 컴퓨터프로그램저작물>응용프로그램>과학기술; 저작자: 충북대학교 산학협력단; 창작연원일: 2025-11-13; 등록연월일: 2025-11-27; 등록번호: C-2025-052987 [ACK: IITP개성AI(100%)]</li>
                         </ul>
                     </div>
