--- a/publication/present.html
+++ b/publication/present.html
@@ -193,6 +193,7 @@
                 <div class="publication">
                     <div class="media-body">
                         <ul>
+                            <li><p>[출원]</p> 발명인: 정영섭, 김미서; 발명의 명칭: 시계열 데이터에 대한 멀티모달 인공지능 시스템과 방법; 출원일: 2026-02-11; 출원번호: 10-2026-0027898 [ACK: RISE2025]</li>
                             <li><p>[출원]</p> 발명인: 정영섭, 김은진; 발명의 명칭: 악성코드 탐지 장치 및 방법; 출원일: 2026-01-15; 출원번호: 10-2026-0008298 [ACK: RISE2025]</li>
                             <li><p>[출원]</p> 발명인: 정영섭, 김하늘; 발명의 명칭: 대규모 언어 모델 기반 성격 요소 인식 및 성격 반영 문장 생성 방법 및 이를 수행하기 위한 장치; 출원일: 2025-10-14; 출원번호: 10-2025-0148169 [ACK: GrandICT연구센터]</li>
                             <li><p>[출원]</p> 발명인: 정영섭; 발명의 명칭: 교통사고 방지를 위한 차량용 신호 표시 장치; 출원일: 2025-09-17; 출원번호: 10-2025-0133892 [ACK: 중점연구소컴정연2020]</li>
